--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p>[テニス、将棋、本を読むこと]</p>
 
-<h3>
+<h4>
 <a id="将来の夢" class="anchor" href="#%E5%B0%86%E6%9D%A5%E3%81%AE%E5%A4%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>将来の夢</h3>
 
 <p>[設計者]</p>
@@ -53,10 +53,10 @@
 
 <p>[プログラム大変ですけど、楽しいです]</p>
 
-<h3>
+<h4>
 <a id="世界のひとびとへのメッセージ" class="anchor" href="#%E4%B8%96%E7%95%8C%E3%81%AE%E3%81%B2%E3%81%A8%E3%81%B3%E3%81%A8%E3%81%B8%E3%81%AE%E3%83%A1%E3%83%83%E3%82%BB%E3%83%BC%E3%82%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>世界のひとびとへのメッセージ</h3>
 
-<p>[ぜひ、私のサイトを見ていってください面白いですよ]</p>
+<p>[2020の日本のオリンピック楽しみにしてください＾＾]</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/s-matsuoka-17pa">s-matsuoka-17pa</a></p>
