--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h3>
 <a id="いまの目標" class="anchor" href="#%E3%81%84%E3%81%BE%E3%81%AE%E7%9B%AE%E6%A8%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>いまの目標</h3>
 
-<p>[テニスをもっと上手く上手くなりたい]</p>
+<p>[テニスをもっと上手くなりたい]</p>
 
 <h3>
 <a id="おとうさんおかあさんへ一言" class="anchor" href="#%E3%81%8A%E3%81%A8%E3%81%86%E3%81%95%E3%82%93%E3%81%8A%E3%81%8B%E3%81%82%E3%81%95%E3%82%93%E3%81%B8%E4%B8%80%E8%A8%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>おとうさん・おかあさんへ一言</h3>
