--- a/index.html
+++ b/index.html
@@ -36,7 +36,40 @@
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
 <img src=”img01” width=”900” height=”630“>
-<p>[テニス、将棋]</p>
+<p>[・将棋
+　なんとなくやってると楽しいですよ（めんどくさい人には向かないですけど）
+
+・将棋の（おもしろい）歴史
+　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。
+なのでどんどんめんどくさいものができました。結果……
+　 
+こんなんになった。……やっば！！てかやれるか！！
+
+けどやっぱりめんどくさすぎたんですね。
+けど今は大丈夫です
+こんな感じです。
+スッキリしてますね.いや・・・あっちが異常なのか…
+
+・テニス
+　好きな理由
+　打った時の感触がとても気持ちがいいから。
+　そしてコートが広いので力いっぱい打てるし。
+　いろいろな作戦を立てれるから楽しい。
+
+・４大トーナメント（グランドスラム）
+　・全豪オープン…オーストラリア
+　・全仏オープン…フランス
+　・ウィンブルドン…他と比べて別格の大会。優勝賞金なんと約３億！！どひゃ～
+　・全米オープン…アメリカ
+
+という大会がある。
+
+また最近、錦織圭選手が世界ランク７位であり、オリンピックで、銅メダルをとった。
+これはなんと９４年ぶりの偉業である。
+また、今まではなかなかいい結果が出なかったが、今は，ほかの競技でも、世界の選手に　　通用できるようになった。
+だからぼくたちにもチャンスはある。（＾＾）
+ 
+]</p>
 
 <h3>
 <a id="将来の夢" class="anchor" href="#%E5%B0%86%E6%9D%A5%E3%81%AE%E5%A4%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>将来の夢</h3>
