--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <h3>
 <a id="名前" class="anchor" href="#%E5%90%8D%E5%89%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>名前</h3>
 
-<p>[松岡　駿介]</p>
+<p>松岡　駿介</p>
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
 <img src=”img01” width=”900” height=”630“>
-<p>[・将棋
-　なんとなくやってると楽しいですよ（めんどくさい人には向かないですけど）
+<p>・将棋
+　なんとなくやってると楽しいですよ（めんどくさい人には向かないですけど）<br>
 
 ・将棋の（おもしろい）歴史
 　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。
@@ -69,12 +69,12 @@
 また、今まではなかなかいい結果が出なかったが、今は，ほかの競技でも、世界の選手に　　通用できるようになった。
 だからぼくたちにもチャンスはある。（＾＾）
  
-]</p>
+</p>
 
 <h3>
 <a id="将来の夢" class="anchor" href="#%E5%B0%86%E6%9D%A5%E3%81%AE%E5%A4%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>将来の夢</h3>
 
-<p>[設計者]</p>
+<p>設計者</p>
 
 <h3>
 <a id="いまの目標" class="anchor" href="#%E3%81%84%E3%81%BE%E3%81%AE%E7%9B%AE%E6%A8%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>いまの目標</h3>
