--- a/index.html
+++ b/index.html
@@ -39,35 +39,35 @@
 <p>・将棋
 　なんとなくやってると楽しいですよ（めんどくさい人には向かないですけど）<br>
 
-・将棋の（おもしろい）歴史
-　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。
-なのでどんどんめんどくさいものができました。結果……
+・将棋の（おもしろい）歴史<br>
+　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。<br>
+なのでどんどんめんどくさいものができました。結果……<br>
 　 
-こんなんになった。……やっば！！てかやれるか！！
+こんなんになった。……やっば！！てかやれるか！！<br>
 
-けどやっぱりめんどくさすぎたんですね。
-けど今は大丈夫です
-こんな感じです。
-スッキリしてますね.いや・・・あっちが異常なのか…
+けどやっぱりめんどくさすぎたんですね。<br>
+けど今は大丈夫です<br>
+こんな感じです。<br>
+スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
-・テニス
-　好きな理由
-　打った時の感触がとても気持ちがいいから。
-　そしてコートが広いので力いっぱい打てるし。
-　いろいろな作戦を立てれるから楽しい。
+・テニス<br>
+　好きな理由<br>
+　打った時の感触がとても気持ちがいいから<br>。
+　そしてコートが広いので力いっぱい打てるし。<br>
+　いろいろな作戦を立てれるから楽しい。<br>
 
-・４大トーナメント（グランドスラム）
-　・全豪オープン…オーストラリア
-　・全仏オープン…フランス
-　・ウィンブルドン…他と比べて別格の大会。優勝賞金なんと約３億！！どひゃ～
-　・全米オープン…アメリカ
+・４大トーナメント（グランドスラム）<br>
+　・全豪オープン…オーストラリア<br>
+　・全仏オープン…フランス<br>
+　・ウィンブルドン…他と比べて別格の大会。優勝賞金なんと約３億！！どひゃ～<br>
+　・全米オープン…アメリカ<br>
 
-という大会がある。
+という大会がある<br>
 
-また最近、錦織圭選手が世界ランク７位であり、オリンピックで、銅メダルをとった。
-これはなんと９４年ぶりの偉業である。
-また、今まではなかなかいい結果が出なかったが、今は，ほかの競技でも、世界の選手に　　通用できるようになった。
-だからぼくたちにもチャンスはある。（＾＾）
+また最近、錦織圭選手が世界ランク７位であり、オリンピックで、銅メダルをとった。<br>
+これはなんと９４年ぶりの偉業である。<br>
+また、今まではなかなかいい結果が出なかったが、今は，ほかの競技でも、世界の選手に　　通用できるようになった。<br>
+だからぼくたちにもチャンスはある。（＾＾）<br>
  
 </p>
 
