--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
 <img src=”img01” width=”900” height=”630“>
 <p>・将棋
-　なんとなくやってると楽しいですよ（めんどくさい人には向かないですけど）<br>
+　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
 ・将棋の（おもしろい）歴史<br>
 　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。<br>
