--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
 ・テニス<br>
 　好きな理由<br>
-　打った時の感触がとても気持ちがいいから<br>。
+　打った時の感触がとても気持ちがいいから.<br>。
 　そしてコートが広いので力いっぱい打てるし。<br>
 　いろいろな作戦を立てれるから楽しい。<br>
 
 ・４大トーナメント（グランドスラム）<br>
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
-　・ウィンブルドン…他と比べて別格の大会。優勝賞金なんと約３億！！どひゃ～<br>
+　・ウィンブルドン…他と比べて別格の大会。<br>優勝賞金なんと約３億！！どひゃ～<br>
 　・全米オープン…アメリカ<br>
 
 という大会がある<br>
