--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 ・４大トーナメント（グランドスラム）<br>
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
-　・ウィンブルドン…他と比べて別格の大会。<br>優勝賞金なんと約３億！！どひゃ～<br>
+　・ウィンブルドン…他と比べて別格の大会<br>
+　                 優勝賞金なんと約３億！！どひゃ～<br>
 　・全米オープン…アメリカ<br>
 
 という大会がある<br>
