--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
 
 という大会がある<br>
 
-また最近、錦織圭選手が世界ランク７位であり、オリンピックで、銅メダルをとった。<br>
+また最近、錦織圭選手が世界ランク７位であり、<br>
+オリンピックで、銅メダルをとった。<br>
 これはなんと９４年ぶりの偉業である。<br>
-また、今まではなかなかいい結果が出なかったが、今は，ほかの競技でも、世界の選手に　　通用できるようになった。<br>
+また、今まではなかなかいい結果が出なかったが<br>、
+今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
 だからぼくたちにもチャンスはある。（＾＾）<br>
  
 </p>
