--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 また最近、錦織圭選手が世界ランク７位であり、<br>
 オリンピックで、銅メダルをとった。<br>
 これはなんと９４年ぶりの偉業である。<br>
-また、今まではなかなかいい結果が出なかったが<br>、
+また、今まではなかなかいい結果が出なかったが,<br>、
 今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
 だからぼくたちにもチャンスはある。（＾＾）<br>
  
