--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 ・テニス<br>
 　好きな理由<br>
-　打った時の感触がとても気持ちがいいから.<br>。
+　打った時の感触がとても気持ちがいいから<br>
 　そしてコートが広いので力いっぱい打てるし。<br>
 　いろいろな作戦を立てれるから楽しい。<br>
 
