--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
-<img src=”img01” width=”900” height=”630“>
 <p>・将棋
 　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
 ・将棋の（おもしろい）歴史<br>
 　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。<br>
 なのでどんどんめんどくさいものができました。結果……<br>
-　 
+<img src=”img02” width=”900” height=”630“><br>　 
 こんなんになった。……やっば！！てかやれるか！！<br>
 
 けどやっぱりめんどくさすぎたんですね。<br>
 けど今は大丈夫です<br>
 こんな感じです。<br>
+<img src=”img03” width=”900” height=”630“><br>
 スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
 ・テニス<br>
@@ -55,6 +55,7 @@
 　打った時の感触がとても気持ちがいいから<br>
 　そしてコートが広いので力いっぱい打てるし。<br>
 　いろいろな作戦を立てれるから楽しい。<br>
+<img src=”img04” width=”900” height=”630“><br>
 
 ・４大トーナメント（グランドスラム）<br>
 　・全豪オープン…オーストラリア<br>
