--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 <p>・将棋
 　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
-・将棋の（おもしろい）歴史<br>
+<h4>・将棋の（おもしろい）歴史<br>
 　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。<br>
 なのでどんどんめんどくさいものができました。結果……<br>
 <img src=”img02” width=”900” height=”630“><br>　 
-こんなんになった。……やっば！！てかやれるか！！<br>
+こんなんになった。……<h4>やっば！！てかやれるか！！<br>
 
 けどやっぱりめんどくさすぎたんですね。<br>
 けど今は大丈夫です<br>
@@ -50,25 +50,25 @@
 <img src=”img03” width=”900” height=”630“><br>
 スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
-・テニス<br>
+<h4>・テニス<br>
 　好きな理由<br>
 　打った時の感触がとても気持ちがいいから<br>
 　そしてコートが広いので力いっぱい打てるし。<br>
 　いろいろな作戦を立てれるから楽しい。<br>
 <img src=”img04” width=”900” height=”630“><br>
 
-・４大トーナメント（グランドスラム）<br>
+<h4>・４大トーナメント（グランドスラム）<br>
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
 　・ウィンブルドン…他と比べて別格の大会<br>
-　                 優勝賞金なんと約３億！！どひゃ～<br>
+　                 優勝賞金なんと<h4>約３億！！どひゃ～<br>
 　・全米オープン…アメリカ<br>
 
 という大会がある<br>
 
 また最近、錦織圭選手が世界ランク７位であり、<br>
 オリンピックで、銅メダルをとった。<br>
-これはなんと９４年ぶりの偉業である。<br>
+これはなんと<h4>９４年ぶりの偉業である。<br>
 また、今まではなかなかいい結果が出なかったが,<br>、
 今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
 だからぼくたちにもチャンスはある。（＾＾）<br>
