--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
-<p>・将棋
+<p><h4>・将棋</h4>
 　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
-<h4>・将棋の（おもしろい）歴史<br>
+<h4>・将棋の（おもしろい）歴史</h4><br>
 　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。<br>
 なのでどんどんめんどくさいものができました。結果……<br>
 <img src=”img02” width=”900” height=”630“><br>　 
-こんなんになった。……<h4>やっば！！てかやれるか！！<br>
+こんなんになった。……<h4>やっば！！てかやれるか！！</h4><br>
 
 けどやっぱりめんどくさすぎたんですね。<br>
 けど今は大丈夫です<br>
@@ -50,14 +50,14 @@
 <img src=”img03” width=”900” height=”630“><br>
 スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
-<h4>・テニス<br>
+<h4>・テニス</h4><br>
 　好きな理由<br>
 　打った時の感触がとても気持ちがいいから<br>
 　そしてコートが広いので力いっぱい打てるし。<br>
 　いろいろな作戦を立てれるから楽しい。<br>
 <img src=”img04” width=”900” height=”630“><br>
 
-<h4>・４大トーナメント（グランドスラム）<br>
+<h4>・４大トーナメント（グランドスラム</h4><br>
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
 　・ウィンブルドン…他と比べて別格の大会<br>
@@ -68,7 +68,7 @@
 
 また最近、錦織圭選手が世界ランク７位であり、<br>
 オリンピックで、銅メダルをとった。<br>
-これはなんと<h4>９４年ぶりの偉業である。<br>
+これはなんと<h4>９４年ぶり</h4>の偉業である。<br>
 また、今まではなかなかいい結果が出なかったが,<br>、
 今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
 だからぼくたちにもチャンスはある。（＾＾）<br>
