--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
 　・ウィンブルドン…他と比べて別格の大会<br>
-　                 優勝賞金なんと<h4>約３億！！どひゃ～<br>
+　                 優勝賞金なんと<h4>約３億！！どひゃ～</h4><br>
 　・全米オープン…アメリカ<br>
 
 という大会がある<br>
