--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h0>Shunsuke&#39;s website</h0>
+        <h1>Shunsuke&#39;s website</h1>
         <p>松岡　駿介のウェブサイト</p>
 
         <p class="view"><a href="https://github.com/s-matsuoka-17pa/web">View the Project on GitHub <small>s-matsuoka-17pa/web</small></a></p>
@@ -39,7 +39,7 @@
 　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
 <h4>・将棋の（おもしろい）歴史</h4><br>
-　もともとは貴族の遊ぶものでした。貴族はとってもひまなので、時間がありました。<br>
+　もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
 なのでどんどんめんどくさいものができました。結果……<br>
 <img src=”img02” width=”900” height=”630“><br>　 
 こんなんになった。……<h4>やっば！！てかやれるか！！</h4><br>
