--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
 
 <h4>・将棋の（おもしろい）歴史</h4><br>
 　もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
-なのでどんどんめんどくさいものができました。結果……<br>
-<img src=”img02” width=”900” height=”630“><br>　 
-こんなんになった。……<h4>やっば！！てかやれるか！！</h4><br>
+ なのでどんどんめんどくさいものができました。<br>結果……<br>
+ <img src=”img02” width=”900” height=”630“><br>　 
+ こんなんになった。……<h4>やっば！！てかやれるか！！</h4><br>
 
-けどやっぱりめんどくさすぎたんですね。<br>
-けど今は大丈夫です<br>
-こんな感じです。<br>
-<img src=”img03” width=”900” height=”630“><br>
-スッキリしてますね.いや・・・あっちが異常なのか…<br>
+ けどやっぱりめんどくさすぎたんですね。<br>
+ けど今は大丈夫です<br>
+ こんな感じです。<br>
+ <img src=”img03” width=”900” height=”630“><br>
+ スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
 <h4>・テニス</h4><br>
 　好きな理由<br>
-　打った時の感触がとても気持ちがいいから<br>
-　そしてコートが広いので力いっぱい打てるし。<br>
-　いろいろな作戦を立てれるから楽しい。<br>
-<img src=”img04” width=”900” height=”630“><br>
+　 打った時の感触がとても気持ちがいいから<br>
+　 そしてコートが広いので力いっぱい打てるし。<br>
+ 　いろいろな作戦を立てれるから楽しい。<br>
+ <img src=”img04” width=”900” height=”630“><br>
 
 <h4>・４大トーナメント（グランドスラム</h4><br>
 　・全豪オープン…オーストラリア<br>
@@ -64,14 +64,14 @@
 　                 優勝賞金なんと<h4>約３億！！どひゃ～</h4><br>
 　・全米オープン…アメリカ<br>
 
-という大会がある<br>
+ という大会がある<br>
 
-また最近、錦織圭選手が世界ランク７位であり、<br>
-オリンピックで、銅メダルをとった。<br>
-これはなんと<h4>９４年ぶり</h4>の偉業である。<br>
-また、今まではなかなかいい結果が出なかったが,<br>、
-今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
-だからぼくたちにもチャンスはある。（＾＾）<br>
+ また最近、錦織圭選手が世界ランク７位であり、<br>
+ オリンピックで、銅メダルをとった。<br>
+ これはなんと<h4>９４年ぶり</h4>の偉業である。<br>
+ また、今まではなかなかいい結果が出なかったが,<br>、
+ 今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
+ だからぼくたちにもチャンスはある。（＾＾）<br>
  
 </p>
 
