--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 　もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
  なのでどんどんめんどくさいものができました。<br>結果……<br>
  <img src=”img02” width=”900” height=”630“><br>　 
- こんなんになった。……<h4>やっば！！てかやれるか！！</h4><br>
+ こんなんになった。……<font color="#ff0000">やっば！！てかやれるか！！</font><br>
 
  けどやっぱりめんどくさすぎたんですね。<br>
  けど今は大丈夫です<br>
@@ -71,14 +71,14 @@
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
 　・ウィンブルドン…他と比べて別格の大会<br>
-　                 優勝賞金なんと<h4>約３億！！どひゃ～</h4><br>
+　                 優勝賞金なんと<font color="#ff0000">約３億！！</font>どひゃ～<br>
 　・全米オープン…アメリカ<br>
 
  という大会がある<br>
 
  また最近、錦織圭選手が世界ランク７位であり、<br>
  オリンピックで、銅メダルをとった。<br>
- これはなんと<h4>９４年ぶり</h4>の偉業である。<br>
+ これはなんと<font color="#ff0000">９４年</font>ぶりの偉業である。<br>
  また、今まではなかなかいい結果が出なかったが,<br>、
  今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
  だからぼくたちにもチャンスはある。（＾＾）<br>
