--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Shunsuke&#39;s website</h1>
-        <p><font color="#800000">松岡　駿介 </font>のウェブサイト</p>
+        <p><font color=" #c0c0c0">松岡　駿介 </font>のウェブサイト</p>
 
         <p class="view"><a href="https://github.com/s-matsuoka-17pa/web">View the Project on GitHub <small>s-matsuoka-17pa/web</small></a></p>
 
