--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
         <h3>
 <a id="名前" class="anchor" href="#%E5%90%8D%E5%89%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>名前</h3>
 
-<p><font color=" #008080 ">松岡　駿介</p>  
+<p><font color=" #00ff00 ">松岡　駿介</p>   </font>
+
 
 <h3>
 <a id="将来の夢" class="anchor" href="#%E5%B0%86%E6%9D%A5%E3%81%AE%E5%A4%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>将来の夢</h3>
 
-<p><font color=" #008080 ">設計者</p>
+<p><font color=" #00ff00 ">設計者</p> </font>
+
 
 <h3>
 <a id="いまの目標" class="anchor" href="#%E3%81%84%E3%81%BE%E3%81%AE%E7%9B%AE%E6%A8%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>いまの目標</h3>
 
-<p><font color=" #008080 ">[テニスをもっと上手くなりたい]</p>
+<p><font color=" #00ff00 ">[テニスをもっと上手くなりたい]</p> </font>
+
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
-<p><h4>・将棋</h4>
+<p><h4><font color=" #008080 ">・将棋</h4>
 　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
 <h4>・将棋の（おもしろい）歴史</h4><br>
@@ -81,7 +84,7 @@
  これはなんと<font color="#ff0000">９４年</font>ぶりの偉業である。<br>
  また、今まではなかなかいい結果が出なかったが,<br>、
  今は，ほかの競技でも、世界の選手に通用できるようになった。<br>
- だからぼくたちにもチャンスはある。（＾＾）<br>
+ だからぼくたちにもチャンスはある。（＾＾）<br> </font>
  
 </p>
 
