--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
-<p><h4><font color="#0000ff ">・将棋</h4>
-　なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
+<p><h4>・将棋</h4>
+　<font color="#0000ff ">なんとなくやってると楽しいですよ<br>（めんどくさい人には向かないですけど）<br>
 
 <h4>・将棋の（おもしろい）歴史</h4><br>
 　もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
