--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 <a id="おとうさんおかあさんへ一言" class="anchor" href="#%E3%81%8A%E3%81%A8%E3%81%86%E3%81%95%E3%82%93%E3%81%8A%E3%81%8B%E3%81%82%E3%</font>
 1%95%E3%82%93%E3%81%B8%E4%B8%80%E8%A8%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>おとうさん・おかあさんへ一言</h3>
 
-<p><font color=" #00ff00 ">[プログラム大変ですけど、楽しいです]</p></font>
+<p><font color=" #808080 ">[プログラム大変ですけど、楽しいです]</p></font>
 
 <h3>
 <a id="世界のひとびとへのメッセージ" class="anchor" href="#%E4%B8%96%E7%95%8C%E3%81%AE%E3%81%B2%E3%81%A8%E3%81%B3%E3%81%A8%E3%81%B8%E3%81%AE%E3%83%A1%E3%83%83%E3%82%BB%E3%83%BC%E3%82%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>世界のひとびとへのメッセージ</h3>
 
-<p><font color=" #00ff00 ">[2020の日本のオリンピック楽しみにしてください＾＾]</p></font>
+<p><font color=" #808080 ">[2020の日本のオリンピック楽しみにしてください＾＾]</p></font>
 
       </section>
       <footer>
