--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <p>かめが歩いた「あしあと」が描く図形、「タートルグラフィックス」を学び、フラクタルとアトラクターを作りました。
 
 <div class="images">
-  <img src="img001" />
+  <img src="web/iwages/img001".png />
 </div>
 
 Screenshot 2016-08-26 14.50.50
