--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <h3>
 <a id="名前" class="anchor" href="#%E5%90%8D%E5%89%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>名前</h3>
 
-<p>松岡　駿介</p>   </font>
+<p><font color=" #000080">松岡　駿介</p>   </font>
 
 
 <h3>
 <a id="将来の夢" class="anchor" href="#%E5%B0%86%E6%9D%A5%E3%81%AE%E5%A4%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>将来の夢</h3>
 
-<p>設計者</p> </font>
+<p><font color=" #000080">設計者</p> </font>
 
 
 <h3>
 <a id="いまの目標" class="anchor" href="#%E3%81%84%E3%81%BE%E3%81%AE%E7%9B%AE%E6%A8%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>いまの目標</h3>
 
-<ｐ>テニスをもっと上手くなりたい]</p> </font>
+<ｐ><font color=" #000080">テニスをもっと上手くなりたい]</p> </font>
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
@@ -88,7 +88,7 @@
 <a id="おとうさんおかあさんへ一言" class="anchor" href="#%E3%81%8A%E3%81%A8%E3%81%86%E3%81%95%E3%82%93%E3%81%8A%E3%81%8B%E3%81%82%E3%</font>
 1%95%E3%82%93%E3%81%B8%E4%B8%80%E8%A8%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>おとうさん・おかあさんへ一言</h3>
 
-<p><font color=" #808080 ">[プログラミング大変ですけど、楽しいです]</p></font>
+<p><font color=" #000080">[プログラミング大変ですけど、楽しいです]</p></font>
 
 <h3>
 <a id="世界のひとびとへのメッセージ" class="anchor" href="#%E4%B8%96%E7%95%8C%E3%81%AE%E3%81%B2%E3%81%A8%E3%81%B3%E3%81%A8%E3%81%B8%E3%81%AE%E3%83%A1%E3%83%83%E3%82%BB%E3%83%BC%E3%82%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>世界のひとびとへのメッセージ</h3>
@@ -117,7 +117,7 @@
 
 Screenshot 2016-08-26 14.50.50
 
-<p><font color=" #808080 ">[2020の日本のオリンピック楽しみにしてください＾＾]</p></font>
+<p><font color=" #000080">[2020の日本のオリンピック楽しみにしてください＾＾]</p></font>
 
       </section>
       <footer>
