--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
 コンピューターを用いて社会について知ること・学ぶことができることを学びました。
 
 <div class="images">
-  <img src="img003" />
+  <img src="images/img003" />
 </div>
 
 <h4>超理科脳：脳画像と計算論的神経科学</h4>
 <p>ひとやいきものの脳を安全に観察・診察するための方法にも、コンピューターが役立っていることを学びました。
 
 <div class="images">
-  <img src="img002" />
+  <img src="images/img002" />
 </div>
 
 <h4>超算数脳：フラクタルとアトラクター</h4>
 <p>かめが歩いた「あしあと」が描く図形、「タートルグラフィックス」を学び、フラクタルとアトラクターを作りました。
 
 <div class="images">
-  <img src="web/iwages/img001".png />
+  <img src="images/img001".png />
 </div>
 
 Screenshot 2016-08-26 14.50.50
