--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h3>
 <a id="いまの目標" class="anchor" href="#%E3%81%84%E3%81%BE%E3%81%AE%E7%9B%AE%E6%A8%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>いまの目標</h3>
 
-<ｐ><font color=" #000080">テニスをもっと上手くなりたい]</p> </font>
+<font color=" #000080"><ｐ>テニスをもっと上手くなりたい</p> </font>
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
@@ -98,21 +98,21 @@
 コンピューターを用いて社会について知ること・学ぶことができることを学びました。
 
 <div class="images">
-  <img src="images/img003" />
+  <img src="images/img003.png" />
 </div>
 
 <h4>超理科脳：脳画像と計算論的神経科学</h4>
 <p>ひとやいきものの脳を安全に観察・診察するための方法にも、コンピューターが役立っていることを学びました。
 
 <div class="images">
-  <img src="images/img002" />
+  <img src="images/img002.png" />
 </div>
 
 <h4>超算数脳：フラクタルとアトラクター</h4>
 <p>かめが歩いた「あしあと」が描く図形、「タートルグラフィックス」を学び、フラクタルとアトラクターを作りました。
 
 <div class="images">
-  <img src="images/img001".png />
+  <img src="images/img003.png" />
 </div>
 
 Screenshot 2016-08-26 14.50.50
