--- a/index.html
+++ b/index.html
@@ -53,11 +53,17 @@
 <h4>・将棋の（おもしろい）歴史</h4><br>
 　 もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
   なのでどんどんめんどくさいものができました。<br>結果……<br>
+  <div class="images">
+  <img src="images/img02.png" />
+</div>
   こんなんになった。……<font color="#ff0000">やっば！！てかやれるか！！</font><br>
 
   けどやっぱりめんどくさすぎたんですね。<br>
   けど今は大丈夫です<br>
   こんな感じです。<br>
+  <div class="images">
+  <img src="images/img03.png" />
+</div>
    スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
 <h4>・テニス</h4><br>
@@ -65,7 +71,9 @@
 　  打った時の感触がとても気持ちがいいから<br>
 　  そしてコートが広いので力いっぱい打てるし。<br>
   　いろいろな作戦を立てれるから楽しい。<br>
-
+ <div class="images">
+  <img src="images/img04.png" />
+</div>
 <h4>・４大トーナメント（グランドスラム</h4><br>
 　・全豪オープン…オーストラリア<br>
 　・全仏オープン…フランス<br>
