--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 　 もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
   なのでどんどんめんどくさいものができました。<br>結果……<br>
   <div class="images">
-  <img src="images/img02.png" />
+  <img src="images/img02.jpg" />
 </div>
   こんなんになった。……<font color="#ff0000">やっば！！てかやれるか！！</font><br>
 
@@ -62,7 +62,7 @@
   けど今は大丈夫です<br>
   こんな感じです。<br>
   <div class="images">
-  <img src="images/img03.png" />
+  <img src="images/img03.jpg" />
 </div>
    スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
@@ -72,7 +72,7 @@
 　  そしてコートが広いので力いっぱい打てるし。<br>
   　いろいろな作戦を立てれるから楽しい。<br>
  <div class="images">
-  <img src="images/img04.png" />
+  <img src="images/img04.jpgg" />
 </div>
 <h4>・４大トーナメント（グランドスラム</h4><br>
 　・全豪オープン…オーストラリア<br>
