--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 　 もともとは貴族の遊ぶものでした。<br>貴族はとってもひまなので、時間がありました。<br>
   なのでどんどんめんどくさいものができました。<br>結果……<br>
   <div class="images">
-  <img src="images/img02.jpg" />
+  <img src="img02.jpg" />
 </div>
   こんなんになった。……<font color="#ff0000">やっば！！てかやれるか！！</font><br>
 
@@ -62,7 +62,7 @@
   けど今は大丈夫です<br>
   こんな感じです。<br>
   <div class="images">
-  <img src="images/img03.jpg" />
+  <img src="img03.jpg" />
 </div>
    スッキリしてますね.いや・・・あっちが異常なのか…<br>
 
@@ -72,7 +72,7 @@
 　  そしてコートが広いので力いっぱい打てるし。<br>
   　いろいろな作戦を立てれるから楽しい。<br>
  <div class="images">
-  <img src="images/img04.jpgg" />
+  <img src="img04.jpgg" />
 </div>
 <h4>・４大トーナメント（グランドスラム</h4><br>
 　・全豪オープン…オーストラリア<br>
@@ -101,26 +101,26 @@
 <h3>
 <a id="世界のひとびとへのメッセージ" class="anchor" href="#%E4%B8%96%E7%95%8C%E3%81%AE%E3%81%B2%E3%81%A8%E3%81%B3%E3%81%A8%E3%81%B8%E3%81%AE%E3%83%A1%E3%83%83%E3%82%BB%E3%83%BC%E3%82%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>世界のひとびとへのメッセージ</h3>
 
-<h3>学んだこと＜/ｈ３＞
+<h3>学んだこと</h3>
 <h4>超社会脳：国際統計と世界情勢</h4>
 コンピューターを用いて社会について知ること・学ぶことができることを学びました。
 
 <div class="images">
-  <img src="images/img001.png" />
+  <img src="img001.png" />
 </div>
 
 <h4>超理科脳：脳画像と計算論的神経科学</h4>
 <p>ひとやいきものの脳を安全に観察・診察するための方法にも、コンピューターが役立っていることを学びました。
 
 <div class="images">
-  <img src="images/img002.png" />
+  <img src="img002.png" />
 </div>
 
 <h4>超算数脳：フラクタルとアトラクター</h4>
 <p>かめが歩いた「あしあと」が描く図形、「タートルグラフィックス」を学び、フラクタルとアトラクターを作りました。
 
 <div class="images">
-  <img src="images/img003.png" />
+  <img src="img003.png" />
 </div>
 
 Screenshot 2016-08-26 14.50.50
