--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 　  そしてコートが広いので力いっぱい打てるし。<br>
   　いろいろな作戦を立てれるから楽しい。<br>
  <div class="images">
-  <img src="img04.jpgg" />
+  <img src="img04.jpg" />
 </div>
 <h4>・４大トーナメント（グランドスラム</h4><br>
 　・全豪オープン…オーストラリア<br>
